--- a/index.html
+++ b/index.html
@@ -115,10 +115,10 @@
             ==================================-->
             <div class="fixed b0 l0 pd-30" data-ckav-sm="pos-rel align-c">
                 <div class="inline-block">
-                    <a href="#" target="_blank" class="op-full sq40 fs16 flex iconbox hov-txt-default txt-white" data-ckav-sm="inline-flex mr-0"><i class="fab fa-youtube"></i></a>
+                    <a href="https://www.youtube.com/channel/UCwEP9cM3QPNeFTdKI5bNh9A" target="_blank" class="op-full sq40 fs16 flex iconbox hov-txt-default txt-white" data-ckav-sm="inline-flex mr-0"><i class="fab fa-youtube"></i></a>
                     <a href="#" target="_blank" class="op-full sq40 fs16 mr-b-10 flex iconbox hov-txt-default txt-white" data-ckav-sm="inline-flex mr-0"><i class="fab fa-telegram-plane"></i></a>
                     <a href="#" target="_blank" class="op-full sq40 fs16 mr-b-10 flex iconbox hov-txt-default txt-white" data-ckav-sm="inline-flex mr-0"><i class="fab fa-twitter"></i></a>
-                    <a href="#" target="_blank" class="op-full sq40 fs16 flex iconbox hov-txt-default txt-white" data-ckav-sm="inline-flex mr-0"><i class="fab fa-discord"></i></a>
+                     <!-- <a href="#" target="_blank" class="op-full sq40 fs16 flex iconbox hov-txt-default txt-white" data-ckav-sm="inline-flex mr-0"><i class="fab fa-discord"></i></a> -->
                 </div>
             </div>
             <!-- ======= END : SOCIAL ICONS =======  -->
@@ -187,10 +187,10 @@
                                         <h3 class="title fs60 lh-1 f-1 mr-b-30" data-ckav-sm="fs30">Proof of Ergo is your source for the latest cryptocurrency news, tech, and interviews</h3>
                                         <p class="fs18 f-2 lh-6 mr-b-40" data-ckav-sm="fs16 mr-b-30">
                                             <span class="op-08">
-                                                We interview some of the top minds in the crypto space, and share with you how Ergo is on the cutting edge of the blockchain ecosystem. Watch Proof of Ergo every two weeks by tuning in to our <a href="https://youtube.com/" target="_blank">Youtube channel</a>. We are proudly sponsored by <a href="https://ergopad.io/" target="_blank">Ergopad</a>, the next evolution in crypto ecosystem solutions.
+                                                We interview some of the top minds in the crypto space, and share with you how Ergo is on the cutting edge of the blockchain ecosystem. Watch Proof of Ergo every two weeks by tuning in to our <a href="https://www.youtube.com/channel/UCwEP9cM3QPNeFTdKI5bNh9A" target="_blank">Youtube channel</a>. We are proudly sponsored by <a href="https://ergopad.io/" target="_blank">Ergopad</a>, the next evolution in crypto ecosystem solutions.
                                             </span>
                                         </p>
-                                        <a href="https://youtube.com/" class="btn btn-default solid fs16 f-1 txt-upper mr-r-20 round">Watch Now</a>
+                                        <a href="https://www.youtube.com/channel/UCwEP9cM3QPNeFTdKI5bNh9A" class="btn btn-default solid fs16 f-1 txt-upper mr-r-20 round">Watch Now</a>
                                         <!--<a href="#contact" class="btn btn-default solid fs16 f-1 txt-upper round">Contact us</a>-->
                                     </div>
                                 </div>
@@ -444,15 +444,15 @@
                             <div class="container">
                                 
                                 <div class="social-icons align-c">
-                                    <a href="#" target="_blank" class="sq120 fs40 mr-20 rd-4 iconbox btn-white animated" data-animin="fadeInUp|0.3">
+                                    <a href="https://www.youtube.com/channel/UCwEP9cM3QPNeFTdKI5bNh9A" target="_blank" class="sq120 fs40 mr-20 rd-4 iconbox btn-white animated" data-animin="fadeInUp|0.3">
                                         <i class="fab fa-youtube"></i>
                                     </a>
                                     <a href="#" target="_blank" class="sq120 fs40 mr-20 rd-4 iconbox btn-white animated" data-animin="fadeInUp|0.2">
                                         <i class="fab fa-twitter"></i>
                                     </a>
-                                    <a href="#" target="_blank" class="sq120 fs40 mr-20 rd-4 iconbox btn-white animated" data-animin="fadeInUp|0.3">
+                                    <!-- <a href="#" target="_blank" class="sq120 fs40 mr-20 rd-4 iconbox btn-white animated" data-animin="fadeInUp|0.3">
                                         <i class="fab fa-discord"></i>
-                                    </a>
+                                    </a> -->
                                     <a href="#" target="_blank" class="sq120 fs40 mr-20 rd-4 iconbox btn-white animated" data-animin="fadeInUp|0.4">
                                         <i class="fab fa-telegram-plane"></i>
                                     </a>
